240715 fix: README.md & ModuleService